# src/main/resources/api-definition.yaml
@@ -423,6 +423,25 @@ resourceTypes:
                           body:
                             application/json:
                                 schema: localizedMessage
+      /superset:
+        /guest-token:
+          displayName: Superset guest token
+          get:
+            is: [ secured ]
+            description: Get a Superset guest token for embedding a dashboard.
+            queryParameters:
+              embeddedUuid:
+                displayName: embeddedUuid
+                type: string
+                required: true
+            responses:
+              200:
+                body:
+                  application/json:
+              401:
+                body:
+                  application/json:
+                    schema: localizedMessage
       /dashboardReports:
         displayName: Dashboard reports
         get:
